@@ -1,3 +1,15 @@
+2009-12-08  David Levin  <levin@chromium.org>
+
+        Reviewed by Adam Barth.
+
+        [check-webkit-style] False positive for DEFINE_OPCODE(op_jtrue) {
+        https://bugs.webkit.org/show_bug.cgi?id=32193
+
+        * Scripts/modules/cpp_style.py: For the function { rule, if there is space
+          at the beginning of line, ignore lines which then have a macro.
+        * Scripts/modules/cpp_style_unittest.py: Add tests to verify the
+          new behavior.
+
 2009-12-08  Dmitry Titov  <dimich@chromium.org>
 
         Rubber-stamped by David Levin.
